--- a/index.html
+++ b/index.html
@@ -299,14 +299,22 @@
             </div>
         </section>
 
+        <style>
 
-
+        </style>
         <section class="section projects">
             <div class="container">
                 <h2 class="section-title wow animate__animated animate__fadeInLeft">Проекты</h2>
+
+                <div id="myBtnContainer">
+                    <button class="filter-btn active" onclick="filterSelection('all')">Все</button>
+                    <button class="filter-btn" onclick="filterSelection('front')">Frontend</button>
+                    <button class="filter-btn" onclick="filterSelection('design')">Дизайн</button>
+                </div>
+
                 <div class="cards">
 
-                    <div class="card wow animate__animated animate__fadeInUp" data-wow-delay="0.2s">
+                    <div class="card wow animate__animated animate__fadeInUp filterDiv design" data-wow-delay="0.2s">
                         <div class="card-project-block">
                             <img class="card-project-image" src="img/photo/А2.jpg" alt="проект фестиваля">
 
@@ -332,7 +340,7 @@
                         </div>
                     </div>
 
-                    <div class="card wow animate__animated animate__fadeInUp" data-wow-delay="0.2s">
+                    <div class="card wow animate__animated animate__fadeInUp filterDiv front" data-wow-delay="0.2s">
                         <div class="card-project-block">
                             <img class="card-project-image" src="img/project/bloger.png" alt="проект фестиваля">
 
@@ -358,7 +366,7 @@
                         </div>
                     </div>
 
-                    <div class="card wow animate__animated animate__fadeInUp" data-wow-delay="0.3s">
+                    <div class="card wow animate__animated animate__fadeInUp filterDiv front" data-wow-delay="0.2s">
                         <div class="card-project-block">
                             <img class="card-project-image" src="img/project/Kuba.jpg" alt="приложение">
 
@@ -382,7 +390,7 @@
                         </div>
                     </div>
 
-                    <div class="card wow animate__animated animate__fadeInUp" data-wow-delay="0.25s">
+                    <div class="card wow animate__animated animate__fadeInUp filterDiv design" data-wow-delay="0.25s">
                         <div class="card-project-block">
                             <img class="card-project-image" src="img/photo/bvlgari.png" alt="фотоплакаты">
 
@@ -408,7 +416,7 @@
                         </div>
                     </div>
 
-                    <div class="card wow animate__animated animate__fadeInUp" data-wow-delay="0.3s">
+                    <div class="card wow animate__animated animate__fadeInUp filterDiv design" data-wow-delay="0.25s">
                         <div class="card-project-block">
                             <img class="card-project-image" src="img/photo/ihana.png" alt="приложение">
 
@@ -432,7 +440,7 @@
                         </div>
                     </div>
 
-                    <div class="card wow animate__animated animate__fadeInUp" data-wow-delay="0.3s">
+                    <div class="card wow animate__animated animate__fadeInUp filterDiv front" data-wow-delay="0.25s">
                         <div class="card-project-block">
                             <img class="card-project-image" src="img/project/Мк.png" alt="приложение">
 
@@ -456,7 +464,7 @@
                         </div>
                     </div>
 
-                    <a href="img/photo/жук.jpg" class="card wow animate__animated animate__fadeInUp" data-wow-delay="0.35s" data-fancybox="images">
+                    <a href="img/photo/жук.jpg" class="card wow animate__animated animate__fadeInUp filterDiv design" data-wow-delay="0.3s" data-fancybox="images">
                         <img class="card-img" src="img/photo/жук.jpg" alt="image">
                         <div class="card-text">
                             <div class="card-heading">
@@ -474,7 +482,7 @@
                         </div>
                     </a>
 
-                    <a href="img/photo/инфографика_uiux.jpg" class="card wow animate__animated animate__fadeInUp" data-wow-delay="0.4s" data-fancybox="images">
+                    <a href="img/photo/инфографика_uiux.jpg" class="card wow animate__animated animate__fadeInUp filterDiv design" data-wow-delay="0.3s" data-fancybox="images">
                         <img class="card-img" src="img/photo/инфографика_uiux.jpg" alt="image">
                         <div class="card-text">
                             <div class="card-heading">
@@ -490,7 +498,7 @@
                         </div>
                     </a>
 
-                    <a href="img/photo/Bauhaus.jpg" class="card wow animate__animated animate__fadeInUp" data-wow-delay="0.45s" data-fancybox="images">
+                    <a href="img/photo/Bauhaus.jpg" class="card wow animate__animated animate__fadeInUp filterDiv design" data-wow-delay="0.3s" data-fancybox="images">
                         <img class="card-img" src="img/photo/Bauhaus.jpg" alt="image">
                         <div class="card-text">
                             <div class="card-heading">
@@ -507,7 +515,7 @@
                         </div>
                     </a>
 
-                    <div class="card wow animate__animated animate__fadeInUp" data-wow-delay="0.3s">
+                    <div class="card wow animate__animated animate__fadeInUp filterDiv front" data-wow-delay="0.35s">
                         <div class="card-project-block">
                             <img class="card-project-image" src="img/project/emo.png" alt="приложение">
 
@@ -531,23 +539,7 @@
                         </div>
                     </div>
 
-                    <!--<a href="img/photo/Агрессия.jpg" class="card wow animate__animated animate__fadeInUp" data-wow-delay="0.5s" data-fancybox="images">
-                        <img class="card-img" src="img/photo/Агрессия.jpg" alt="image">
-                        <div class="card-text">
-                            <div class="card-heading">
-                                <h3 class="card-title">Плакат на тему: кто&nbsp;я?</h3>
-                            </div>
-                            
-                            <div class="card-info">
-                                <div class="category">
-                                    <h4 class="project-subtitle card-susubtitle">Инструменты:</h4>
-                                    <p class="project-paragraph about-box-text">Adobe Photoshop</p>
-                                </div>
-                            </div>
-                        </div>
-                    </a>-->
-
-                    <a href="img/photo/3.png" class="card wow animate__animated animate__fadeInUp" data-wow-delay="0.55s" data-fancybox="images">
+                    <a href="img/photo/3.png" class="card wow animate__animated animate__fadeInUp filterDiv design" data-wow-delay="0.35s" data-fancybox="images">
                         <img class="card-img" src="img/photo/3.png" alt="image">
                         <div class="card-text">
                             <div class="card-heading">
@@ -566,7 +558,7 @@
                         </div>
                     </a>
 
-                    <a href="img/photo/флаеры.jpg" class="card wow animate__animated animate__fadeInUp" data-wow-delay="0.6s" data-fancybox="images">
+                    <a href="img/photo/флаеры.jpg" class="card wow animate__animated animate__fadeInUp filterDiv design" data-wow-delay="0.35s" data-fancybox="images">
                         <img class="card-img" src="img/photo/флаеры.jpg" alt="image">
                         <div class="card-text">
                             <div class="card-heading">
@@ -582,8 +574,6 @@
                             </div>
                         </div>
                     </a>
-
-
 
                 </div>
 
