--- a/index.html
+++ b/index.html
@@ -224,9 +224,9 @@
                                 <a href="https://webmart.by/" target="_blank">Webmart Group</a>
                             </p>
                             <span>Полный рабочий день</span>
-                            <span>февр. 2021 г. – настоящее время(10 мес.)</span>
+                            <span>февр. 2021&nbsp;г. – настоящее время(10 мес.)</span>
 
-                            <ul>
+                            <ul class="blockquote_ul">
                                 <li>Разработка веб-сайтов с нуля;</li>
                                 <li>Верстка по макетам (figma);</li>
                                 <li>Правка существующих страниц сайтов;</li>
