edit animation time

--- a/index.html
+++ b/index.html
@@ -88,11 +88,11 @@
                         </div>
                     </div>
 
-                    <div class="plus wow animate__animated animate__rotateIn" data-wow-delay="1.7s">
+                    <div class="plus wow animate__animated animate__rotateIn" data-wow-delay="1.5s">
                         <p>+</p>
                     </div>
 
-                    <div class="other-skills wow animate__animated animate__zoomIn" data-wow-delay="2s">
+                    <div class="other-skills wow animate__animated animate__zoomIn" data-wow-delay="1.7s">
                         <div class="prog">
                             <p class="skill">JQuery</p>
                             <p class="skill">Bootstrap</p>
@@ -108,10 +108,10 @@
 
                 </div>
 
-                <h2 class="section-title wow animate__animated animate__fadeInLeft">Также знаю</h2>
+                <h2 class="section-title wow animate__animated animate__fadeInLeft" data-wow-delay="2s">Также знаю</h2>
                 <div class="flex-design-cont">
-                    <div class="first-skills wow animate__animated animate__zoomIn" data-wow-delay="1.2s">
-                        <div class="design-skils wow animate__animated animate__zoomIn" data-wow-delay="2s">
+                    <div class="first-skills wow animate__animated animate__zoomIn" data-wow-delay="2.2s">
+                        <div class="design-skils wow animate__animated animate__zoomIn" data-wow-delay="2.5s">
                             <div class="design">
                                 <p class="skill">Adobe Illustrator</p>
                                 <p class="skill">Adobe Photoshop</p>
