edit files and animate

--- a/index.html
+++ b/index.html
@@ -306,15 +306,15 @@
             <div class="container">
                 <h2 class="section-title wow animate__animated animate__fadeInLeft">Проекты</h2>
 
-                <div id="myBtnContainer">
+                <div id="myBtnContainer" class="wow animate__animated animate__fadeInLeft" data-wow-delay="0.2s">
                     <button class="filter-btn active" onclick="filterSelection('all')">Все</button>
                     <button class="filter-btn" onclick="filterSelection('front')">Frontend</button>
                     <button class="filter-btn" onclick="filterSelection('design')">Дизайн</button>
                 </div>
 
-                <div class="cards">
+                <div class="cards wow animate__animated animate__fadeInUp">
 
-                    <div class="card wow animate__animated animate__fadeInUp filterDiv design" data-wow-delay="0.2s">
+                    <div class="card filterDiv design">
                         <div class="card-project-block">
                             <img class="card-project-image" src="img/photo/А2.jpg" alt="проект фестиваля">
 
@@ -340,7 +340,7 @@
                         </div>
                     </div>
 
-                    <div class="card wow animate__animated animate__fadeInUp filterDiv front" data-wow-delay="0.2s">
+                    <div class="card filterDiv front">
                         <div class="card-project-block">
                             <img class="card-project-image" src="img/project/bloger.png" alt="проект фестиваля">
 
@@ -366,7 +366,7 @@
                         </div>
                     </div>
 
-                    <div class="card wow animate__animated animate__fadeInUp filterDiv front" data-wow-delay="0.2s">
+                    <div class="card filterDiv front">
                         <div class="card-project-block">
                             <img class="card-project-image" src="img/project/Kuba.jpg" alt="приложение">
 
@@ -390,7 +390,7 @@
                         </div>
                     </div>
 
-                    <div class="card wow animate__animated animate__fadeInUp filterDiv design" data-wow-delay="0.25s">
+                    <div class="card filterDiv design">
                         <div class="card-project-block">
                             <img class="card-project-image" src="img/photo/bvlgari.png" alt="фотоплакаты">
 
@@ -416,7 +416,7 @@
                         </div>
                     </div>
 
-                    <div class="card wow animate__animated animate__fadeInUp filterDiv design" data-wow-delay="0.25s">
+                    <div class="card filterDiv design">
                         <div class="card-project-block">
                             <img class="card-project-image" src="img/photo/ihana.png" alt="приложение">
 
@@ -440,7 +440,7 @@
                         </div>
                     </div>
 
-                    <div class="card wow animate__animated animate__fadeInUp filterDiv front" data-wow-delay="0.25s">
+                    <div class="card filterDiv front">
                         <div class="card-project-block">
                             <img class="card-project-image" src="img/project/Мк.png" alt="приложение">
 
@@ -464,7 +464,7 @@
                         </div>
                     </div>
 
-                    <a href="img/photo/жук.jpg" class="card wow animate__animated animate__fadeInUp filterDiv design" data-wow-delay="0.3s" data-fancybox="images">
+                    <a href="img/photo/жук.jpg" class="card filterDiv design" data-fancybox="images">
                         <img class="card-img" src="img/photo/жук.jpg" alt="image">
                         <div class="card-text">
                             <div class="card-heading">
@@ -482,7 +482,7 @@
                         </div>
                     </a>
 
-                    <a href="img/photo/инфографика_uiux.jpg" class="card wow animate__animated animate__fadeInUp filterDiv design" data-wow-delay="0.3s" data-fancybox="images">
+                    <a href="img/photo/инфографика_uiux.jpg" class="card filterDiv design" data-fancybox="images">
                         <img class="card-img" src="img/photo/инфографика_uiux.jpg" alt="image">
                         <div class="card-text">
                             <div class="card-heading">
@@ -498,7 +498,7 @@
                         </div>
                     </a>
 
-                    <a href="img/photo/Bauhaus.jpg" class="card wow animate__animated animate__fadeInUp filterDiv design" data-wow-delay="0.3s" data-fancybox="images">
+                    <a href="img/photo/Bauhaus.jpg" class="card filterDiv design" data-fancybox="images">
                         <img class="card-img" src="img/photo/Bauhaus.jpg" alt="image">
                         <div class="card-text">
                             <div class="card-heading">
@@ -515,7 +515,7 @@
                         </div>
                     </a>
 
-                    <div class="card wow animate__animated animate__fadeInUp filterDiv front" data-wow-delay="0.35s">
+                    <div class="card filterDiv front">
                         <div class="card-project-block">
                             <img class="card-project-image" src="img/project/emo.png" alt="приложение">
 
@@ -539,7 +539,7 @@
                         </div>
                     </div>
 
-                    <a href="img/photo/3.png" class="card wow animate__animated animate__fadeInUp filterDiv design" data-wow-delay="0.35s" data-fancybox="images">
+                    <a href="img/photo/3.png" class="card filterDiv design" data-fancybox="images">
                         <img class="card-img" src="img/photo/3.png" alt="image">
                         <div class="card-text">
                             <div class="card-heading">
@@ -558,7 +558,7 @@
                         </div>
                     </a>
 
-                    <a href="img/photo/флаеры.jpg" class="card wow animate__animated animate__fadeInUp filterDiv design" data-wow-delay="0.35s" data-fancybox="images">
+                    <a href="img/photo/флаеры.jpg" class="card filterDiv design" data-fancybox="images">
                         <img class="card-img" src="img/photo/флаеры.jpg" alt="image">
                         <div class="card-text">
                             <div class="card-heading">
