--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
         <div class="container">
 
             <div class="hero-header">
-                <div class="social-links hero-header-social wow animate__animated animate__fadeInDown" data-wow-delay="0.2s">
+                <div class="social-links hero-header-social wow animate__animated animate__fadeInDown"
+                    data-wow-delay="0.2s">
                     <div class="hero-header-phone">
                         <a class="contacts-link" href="tel:+375447167805">+375 44 716-78-05</a>
                     </div>
@@ -55,10 +56,12 @@
                 </div>
 
                 <div class="hero-text">
-                    <h1 class="hero-title wow animate__animated animate__fadeInRight" data-wow-delay="0.4s">Ульяна Жидко</h1>
+                    <h1 class="hero-title wow animate__animated animate__fadeInRight" data-wow-delay="0.4s">Ульяна Жидко
+                    </h1>
                     <p class="hero-discription wow animate__animated animate__fadeInRight" data-wow-delay="0.6s">
                         <span style="color: #FFBB01;">Frontend-разработчик, web-дизайнер. </span>
-                        <br> Беларусь Минск.<br> Открыта для интересных проектов и новых возможностей по всему миру, всегда стараюсь принести пользу. Буду рада сотрудничеству!
+                        <br> Беларусь Минск.<br> Открыта для интересных проектов и новых возможностей по всему миру,
+                        всегда стараюсь принести пользу. Буду рада сотрудничеству!
                     </p>
                 </div>
 
@@ -153,7 +156,7 @@
                                 <div class="flag-wrapper">
                                     <span class="hexa"></span>
                                     <span class="flag"><a href="img/Microsoft 20480 - Zhidko.jpg"
-                                        target="_blank">сертификат</a></span>
+                                            target="_blank">сертификат</a></span>
                                     <span class="time-wrapper"><span class="time">01.06.2020</span></span>
                                 </div>
                                 <div class="desc">Institute of IT&Business Administration IBA Group Microsoft 20480
@@ -173,7 +176,7 @@
                                 <div class="flag-wrapper">
                                     <span class="hexa"></span>
                                     <span class="flag"><a href="https://www.futurelearn.com/certificates/fv2hhxt"
-                                        target="_blank">сертификат</a></span>
+                                            target="_blank">сертификат</a></span>
                                     <span class="time-wrapper"><span class="time">16.07.2020</span></span>
                                 </div>
                                 <div class="desc">
@@ -192,10 +195,11 @@
                                 <div class="flag-wrapper">
                                     <span class="hexa"></span>
                                     <span class="flag"><a href="img/WebSert-Zhidko.jpg"
-                                        target="_blank">сертификат</a></span>
+                                            target="_blank">сертификат</a></span>
                                     <span class="time-wrapper"><span class="time">20.08.2020</span></span>
                                 </div>
-                                <div class="desc">Летний университет БГУ<br><strong>Курс Web-программирование</strong> <br>
+                                <div class="desc">Летний университет БГУ<br><strong>Курс Web-программирование</strong>
+                                    <br>
                                     <ul style="text-align: left;list-style-type: disc;">
                                         <li>технологии и протоколы сети</li>
                                         <li>различные типы верстки</li>
@@ -224,7 +228,7 @@
                                 <a href="https://webmart.by/" target="_blank">Webmart Group</a>
                             </p>
                             <span>Полный рабочий день</span>
-                            <span>февр. 2021&nbsp;г. – настоящее время(10 мес.)</span>
+                            <span>февр. 2021&nbsp;г. – настоящее время(11 мес.)</span>
 
                             <ul class="blockquote_ul">
                                 <li>Разработка веб-сайтов с нуля;</li>
@@ -233,7 +237,8 @@
                                 <li>Работа с системой управления сайтом MODx(Evo) и WordPress;</li>
                                 <li>Проектирование пользовательских интерфейсов;</li>
                                 <li>Разработка визуальных материалов;</li>
-                                <li>Адаптивная, кроссбраузерная верстка с использованием Bootstrap, Materialize, jQuery и без.
+                                <li>Адаптивная, кроссбраузерная верстка с использованием Bootstrap, Materialize, jQuery
+                                    и без.
                                 </li>
                             </ul>
                         </div>
@@ -384,7 +389,8 @@
                                 </div>
                             </div>
                             <div class="card-block card-block-poster">
-                                <h2><a class="block-link" href="https://ulyanazhidko.github.io/Kuba/" target="_blank">Посмотреть</a>
+                                <h2><a class="block-link" href="https://ulyanazhidko.github.io/Kuba/"
+                                        target="_blank">Посмотреть</a>
                                 </h2>
                             </div>
                         </div>
@@ -410,7 +416,8 @@
                                 </div>
                             </div>
                             <div class="card-block card-block-poster">
-                                <h2><a class="block-link" href="https://zhidkoulyana.wixsite.com/bvlgaryposters" target="_blank">Посмотреть</a>
+                                <h2><a class="block-link" href="https://zhidkoulyana.wixsite.com/bvlgaryposters"
+                                        target="_blank">Посмотреть</a>
                                 </h2>
                             </div>
                         </div>
@@ -434,7 +441,9 @@
                                 </div>
                             </div>
                             <div class="card-block card-block-poster">
-                                <h2><a class="block-link" href="https://www.figma.com/proto/27iwtDwhwgwagDixf2kDhN/Ihana?node-id=1%3A83&scaling=scale-down&page-id=0%3A1" target="_blank">Посмотреть</a>
+                                <h2><a class="block-link"
+                                        href="https://www.figma.com/proto/27iwtDwhwgwagDixf2kDhN/Ihana?node-id=1%3A83&scaling=scale-down&page-id=0%3A1"
+                                        target="_blank">Посмотреть</a>
                                 </h2>
                             </div>
                         </div>
@@ -458,7 +467,8 @@
                                 </div>
                             </div>
                             <div class="card-block card-block-poster">
-                                <h2><a class="block-link" href="https://ulyanazhidko.github.io/MK-test/" target="_blank">Посмотреть</a>
+                                <h2><a class="block-link" href="https://ulyanazhidko.github.io/MK-test/"
+                                        target="_blank">Посмотреть</a>
                                 </h2>
                             </div>
                         </div>
@@ -533,7 +543,8 @@
                                 </div>
                             </div>
                             <div class="card-block card-block-poster">
-                                <h2><a class="block-link" href="https://psyexpert.pro/emotions.html" target="_blank">Посмотреть</a>
+                                <h2><a class="block-link" href="https://psyexpert.pro/emotions.html"
+                                        target="_blank">Посмотреть</a>
                                 </h2>
                             </div>
                         </div>
@@ -594,9 +605,11 @@
                             <a class="contacts-link" href="tel:+375447167805">+375 44 716-78-05</a>
                         </div>
                         <!-- social-icins -->
-                        <div class="social-links footer-social-links wow animate__animated animate__zoomIn" data-wow-delay="1.2s">
+                        <div class="social-links footer-social-links wow animate__animated animate__zoomIn"
+                            data-wow-delay="1.2s">
 
-                            <a href="https://github.com/UlyanaZhidko?tab=repositories" class="social-link" target="_blank">
+                            <a href="https://github.com/UlyanaZhidko?tab=repositories" class="social-link"
+                                target="_blank">
                                 <svg width="22" height="22" class="social-link-icon">
                                     <use xlink:href="img/icons.svg#github"></use>
                                 </svg>
@@ -628,15 +641,17 @@
 
                             <div class="my-cv wow animate__animated animate__fadeIn" data-wow-delay="1.4s">
 
-                                <a href="https://drive.google.com/file/d/1OgPRbqrIo3WUg4OUJijYoMJXqh7TsjAE/view?usp=sharing" class="contacts-link" target="_blank">Мое резюме (.pdf)  
-                                    <svg width="30" height="30" >
+                                <a href="https://drive.google.com/file/d/1OgPRbqrIo3WUg4OUJijYoMJXqh7TsjAE/view?usp=sharing"
+                                    class="contacts-link" target="_blank">Мое резюме (.pdf)
+                                    <svg width="30" height="30">
                                         <use xlink:href="img/icons.svg#cv"></use>
                                     </svg>
                                 </a>
                             </div>
 
                             <div class="contacts-police-form">
-                                <a class="contacts-police add__ad wow animate__animated animate__fadeIn" data-wow-delay="1.4s">
+                                <a class="contacts-police add__ad wow animate__animated animate__fadeIn"
+                                    data-wow-delay="1.4s">
                                     Политика конфиденциальности
                                 </a>
                             </div>
@@ -646,16 +661,24 @@
                     <div class="modal modal__add hide">
                         <div class="modal__block">
                             <div class="on-hover">
-                                <p> Эта страница не собирает данные о Вас, но так как она расположена на github pages на неё распространяется политика конфиденциальности github. По отношению к Вам будет честно расположить здесь вот часть политики, чтобы Вы
+                                <p> Эта страница не собирает данные о Вас, но так как она расположена на github pages на
+                                    неё распространяется политика конфиденциальности github. По отношению к Вам будет
+                                    честно расположить здесь вот часть политики, чтобы Вы
                                     знали, какую информацию о вас собрали при посещении этой страницы:
                                 </p>
                             </div>
                             <div class="modal__content text-block hidden-block">
                                 <p>
-                                    If you're accessing our Service or Website, we automatically collect the same basic information that most services collect, subject, where necessary, to your consent. This includes information about how you use the Service, such as the pages you view,
-                                    the referring site, your IP address and session information, and the date and time of each request. This is information we collect from every visitor to the Website, whether they have an Account or not. This information
+                                    If you're accessing our Service or Website, we automatically collect the same basic
+                                    information that most services collect, subject, where necessary, to your consent.
+                                    This includes information about how you use the Service, such as the pages you view,
+                                    the referring site, your IP address and session information, and the date and time
+                                    of each request. This is information we collect from every visitor to the Website,
+                                    whether they have an Account or not. This information
                                     may include User Personal information.
-                                    <br> We may collect certain information about your device, such as its IP address, browser or client application information, language preference, operating system and application version, device type and ID, and device
+                                    <br> We may collect certain information about your device, such as its IP address,
+                                    browser or client application information, language preference, operating system and
+                                    application version, device type and ID, and device
                                     model and manufacturer. This information may include User Personal information.
                                 </p>
                             </div>
