--- a/index.html
+++ b/index.html
@@ -99,12 +99,11 @@
                         <div class="prog">
                             <p class="skill">JQuery</p>
                             <p class="skill">Bootstrap</p>
-                            <p class="skill">WordPress</p>
+
                         </div>
                         <div class="prog">
                             <p class="skill">Github</p>
-                            <p class="skill">Битрикс24</p>
-                            <p class="skill">Slack</p>
+                            <p class="skill">WordPress</p>
                         </div>
 
                     </div>
@@ -228,13 +227,13 @@
                                 <a href="https://webmart.by/" target="_blank">Webmart Group</a>
                             </p>
                             <span>Полный рабочий день</span>
-                            <span>февр. 2021&nbsp;г. – настоящее время(11 мес.)</span>
+                            <span>февр. 2021&nbsp;г. – дек.(11 мес.)</span>
 
                             <ul class="blockquote_ul">
                                 <li>Разработка веб-сайтов с нуля;</li>
                                 <li>Верстка по макетам (figma);</li>
                                 <li>Правка существующих страниц сайтов;</li>
-                                <li>Работа с системой управления сайтом MODx(Evo) и WordPress;</li>
+                                <li>Работа с системой управления сайтом MODx (Evo) и WordPress;</li>
                                 <li>Проектирование пользовательских интерфейсов;</li>
                                 <li>Разработка визуальных материалов;</li>
                                 <li>Адаптивная, кроссбраузерная верстка с использованием Bootstrap, Materialize, jQuery
@@ -304,9 +303,6 @@
             </div>
         </section>
 
-        <style>
-
-        </style>
         <section class="section projects">
             <div class="container">
                 <h2 class="section-title wow animate__animated animate__fadeInLeft">Проекты</h2>
