edit section work

--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                                 <a href="https://webmart.by/" target="_blank">Webmart Group</a>
                             </p>
                             <span>Полный рабочий день</span>
-                            <span>февр. 2021&nbsp;г. – дек.(11 мес.)</span>
+                            <span>февр. 2021&nbsp;г. – дек. 2021&nbsp;г. (11 мес.)</span>
 
                             <ul class="blockquote_ul">
                                 <li>Разработка веб-сайтов с нуля;</li>
